--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "flask>=3.1.2",
     "flask-sqlalchemy>=3.1.1",
     "psycopg2-binary>=2.9.11",
+    "python-dotenv>=1.2.1",
 ]
 
 [dependency-groups]
