--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -2,7 +2,7 @@ name: Python CI Pipeline
 
 on:
     push:
-        branches: [main]
+        branches: [main, feat/setup-ci]
     pull_request:
         branches: [main]
 
