--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -45,5 +45,6 @@ jobs:
             - name: Run Tests
               env:
                   # Flask to use the CI's temporary database
+                  PYTHONPATH: .
                   DATABASE_URL: postgresql://postgres:password@localhost:5432/insight_vault_test
               run: uv run pytest --cov=app
