--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -2,9 +2,13 @@ name: Python CI Pipeline
 
 on:
     push:
-        branches: [main, feat/setup-ci]
+        branches:
+            - main
+            - "feat/**"
+            - "fix/**"
     pull_request:
-        branches: [main]
+        branches:
+            - main
 
 jobs:
     test:
